2002-06-17  Richard Williamson  <rjw@apple.com>

    Fixed www.2cpu.com regression.  QWidget::_displayRect was displaying the wrong view.
    This was a regression that would impact all DHTML.

    Added explicit complete check for resources, rather
    than depend on bytesSoFar == totalToLoad.
    
	* WebCoreSupport.subproj/IFResourceURLHandleClient.m:
	(-[IFResourceURLHandleClient receivedProgressWithHandle:complete:]):
	(-[IFResourceURLHandleClient IFURLHandleResourceDidBeginLoading:]):
	(-[IFResourceURLHandleClient IFURLHandle:resourceDataDidBecomeAvailable:]):
	(-[IFResourceURLHandleClient IFURLHandleResourceDidCancelLoading:]):
	(-[IFResourceURLHandleClient IFURLHandleResourceDidFinishLoading:data:]):
	* WebView.subproj/IFWebControllerPrivate.h:
	* WebView.subproj/IFWebControllerPrivate.mm:
	(-[IFWebController _receivedProgress:forResourceHandle:fromDataSource:complete:]):

2002-06-17  Chris Blumenberg  <cblu@apple.com>

	Fix for 2939881. No more overwritting of one's files.

	* Misc.subproj/IFDownloadHandler.mm:
	(-[IFDownloadHandler receivedData:]):
	(-[IFDownloadHandler finishedLoading]):

2002-06-17  Richard Williamson  <rjw@apple.com>

    Fixed IFImageViews not drawing correctly.
    
    Changed compeletion to explicity use IFURLHandleResourceDidFinishLoading, rather
    than depend on bytesSoFar == totalToLoad.
    
	* WebView.subproj/IFMainURLHandleClient.mm:
	(-[IFMainURLHandleClient IFURLHandleResourceDidCancelLoading:]):
	(-[IFMainURLHandleClient IFURLHandleResourceDidFinishLoading:data:]):
	(-[IFMainURLHandleClient IFURLHandle:resourceDataDidBecomeAvailable:]):
	* WebView.subproj/IFWebControllerPrivate.h:
	* WebView.subproj/IFWebControllerPrivate.mm:
	(-[IFWebController _mainReceivedProgress:forResourceHandle:fromDataSource:complete:]):

2002-06-16  Darin Adler  <darin@apple.com>

	* WebCoreSupport.subproj/IFWebCoreFrame.m: (-[IFWebCoreFrame bridge]): Added.

2002-06-16  Darin Adler  <darin@apple.com>
